refactor: Cleanup azure.go controller
